--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <ul class="places-list">
         <li class="special-img-class-small" style="background-image: url(/project/assets/images/bg1.jpg);"></li>
         <li class="special-img-class-large" style="background-image: url(/project/assets/images/bg2.webp);"></li>
-        <li class="special-img-class-large"style="background-image: url(/project/assets/images/bg3.jpg);"></li>
+        <li class="special-img-class-large"style="background-image: url(/assets/images/bg3.jpg);"></li>
         <li class="special-img-class-small"style="background-image: url(/project/assets/images/bg4.jpg);"></li>
         <li class="special-img-class-large"style="background-image: url(/project/assets/images/bg5.jpg);"></li>
       </ul>
