--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="hero-section">
       <div
         style="
-          background-image: url(/project/assets/images/bg.jpg);
+          background-image: url(assets/images/bg.jpg);
         "
         class="bg-img"
       ></div>
@@ -42,11 +42,11 @@
       </p>
       <hr />
       <ul class="places-list">
-        <li class="special-img-class-small" style="background-image: url(/project/assets/images/bg1.jpg);"></li>
-        <li class="special-img-class-large" style="background-image: url(/project/assets/images/bg2.webp);"></li>
-        <li class="special-img-class-large"style="background-image: url(assets/images/bg3.jpg);"></li>
-        <li class="special-img-class-small"style="background-image: url(/project/assets/images/bg4.jpg);"></li>
-        <li class="special-img-class-large"style="background-image: url(/project/assets/images/bg5.jpg);"></li>
+        <li class="special-img-class-small" style="background-image: url(assets/images/bg1.jpg);"></li>
+        <li class="special-img-class-large" style="background-image: url(assets/images/bg2.webp);"></li>
+        <li class="special-img-class-large"style="background-image: url(images/bg3.jpg);"></li>
+        <li class="special-img-class-small"style="background-image: url(assets/images/bg4.jpg);"></li>
+        <li class="special-img-class-large"style="background-image: url(/assets/images/bg5.jpg);"></li>
       </ul>
     </section>
 
