all bugs resolved index.html

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       <ul class="places-list">
         <li class="special-img-class-small" style="background-image: url(assets/images/bg1.jpg);"></li>
         <li class="special-img-class-large" style="background-image: url(assets/images/bg2.webp);"></li>
-        <li class="special-img-class-large"style="background-image: url(images/bg3.jpg);"></li>
+        <li class="special-img-class-large"style="background-image: url(assets/images/bg3.jpg);"></li>
         <li class="special-img-class-small"style="background-image: url(assets/images/bg4.jpg);"></li>
-        <li class="special-img-class-large"style="background-image: url(/assets/images/bg5.jpg);"></li>
+        <li class="special-img-class-large"style="background-image: url(assets/images/bg5.jpg);"></li>
       </ul>
     </section>
 
